RESOLVED FIXED134530
[iOS][WK2] Fix a race between the short tap and long tap highlight
https://bugs.webkit.org/show_bug.cgi?id=134530
Summary [iOS][WK2] Fix a race between the short tap and long tap highlight
Benjamin Poulain
Reported 2014-07-01 17:24:56 PDT
[iOS][WK2] Fix a race between the short tap and long tap highlight
Attachments
Patch (3.98 KB, patch)
2014-07-01 17:35 PDT, Benjamin Poulain
enrica: review+
Benjamin Poulain
Comment 1 2014-07-01 17:35:15 PDT
Enrica Casucci
Comment 2 2014-07-01 17:38:25 PDT
Comment on attachment 234226 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234226&action=review Looks reasonable, > Source/WebKit2/ChangeLog:23 > + Just invalidating the ID would create an other race: typo 'an other'
Benjamin Poulain
Comment 3 2014-07-01 17:49:56 PDT
Note You need to log in before you can comment on or make changes to this bug.